# django-todo-react

./: .dockerignore  README.md
backend/: .gitignore  dockerfile  pyproject.toml
backend/backend/: settings.py  urls.py
backend/todo/: admin.py  models.py  permissions.py  views.py
backend/todo/migrations/: 0001_initial.py  0002_todo_updated_at.py
deploy/: docker-compose.dev.yml  docker-compose.yml
frontend/: .gitignore  dockerfile  nginx.conf  package.json
frontend/src/: App.js  index.js
frontend/src/components/: Modal.js  ToDoManger.js
frontend/src/login/: AuthContext.js  LoginForm.js  useAuth.js
